--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -6,6 +6,16 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='CSS/styles.css') }}" type="text/css" />
 </head>
 <body>
+    <div class="modal fade" id="modal">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title" id="ModalTitle">Cart</h3>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="{{ url_for('static',filename='JS/script.js') }}"></script>
 </body>
 </html>
