--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -16,6 +16,50 @@
             </div>
         </div>
     </div>
+
+    <header>
+        <nav class="navbar fixed-top navbar-dark bg-dark navbar-expand-sm box-shadow">
+          <a href="/" class="navbar-brand d-flex align-items-center">
+              <strong><i class="far fa-futbol"></i> Readers Paradise</strong>
+          </a>
+          {% if session %}
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item"><a href="/logout/" class="nav-link">Logout</a></li>
+            <li class="nav-item"><a href="/history/" class="nav-link">Your Purchases</a></li>
+          {% else %}
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item"><a href="/new/" class="nav-link">Sign Up</a></li>
+            <li class="nav-item"><a href="/login/" class="nav-link">Sign In</a></li>
+    
+          {% endif %}
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                Filter By
+              </a>
+              <div class="dropdown-menu">
+                  <a class="dropdown-item" href="/">All</a>              
+                  <a class="dropdown-item" href="/filter/?kind=Fiction">Fiction</a>
+                  <a class="dropdown-item" href="/filter/?kind=Mystery">Mystery</a>
+                  <a class="dropdown-item" href="/filter/?kind=Novel">Novel</a>
+                  <a class="dropdown-item" href="/filter/?sale=1">On Sale</a>
+                  <a class="dropdown-item" href="/filter/?price=1">Price</a>
+              </div>
+            </li>
+          </ul>
+          <div>
+            <button class="navbar-toggler" style="display:inline" type="button" data-toggle="modal" data-target="#modalCenter">
+              <span class="glyphicon glyphicon-shopping-cart" data-toggle="modal" data-target="">
+                <i class="fas fa-shopping-cart"></i>
+                <span class="counter"> </span>
+                <span class="counter"> </span>
+              </span>
+            </button>
+          </div>
+        </nav>
+      </header>
+
+
+      
     <script src="{{ url_for('static',filename='JS/script.js') }}"></script>
 </body>
 </html>
