created all the required html pages
created all the required html pages

--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <link rel="stylesheet" href="{{ url_for('static',filename='CSS/styles.css') }}" type="text/css" />
+    <link rel="stylesheet" href="{{ url_for('static',filename='Static/CSS/styles.css') }}" type="text/css" />
 </head>
 <body>
     <div class="modal fade" id="modal">
@@ -60,6 +60,6 @@
 
 
       
-    <script src="{{ url_for('static',filename='JS/script.js') }}"></script>
+    <script src="{{ url_for('static',filename='Static/JS/script.js') }}"></script>
 </body>
 </html>
