added textboxes and button for login
added textboxes and button for login

--- a/templates/login.html
+++ b/templates/login.html
@@ -17,6 +17,23 @@
                 </a>
             </nav>
         </header> <br/>
-        
+        <main>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm">
+                        <h2>Sign In to Buy</h2>
+                        <div>
+                            <form action="/logged/" class="form" method="post">
+                                <div>
+                                    <input type="text" name="username" autofocus placeholder="Username">
+                                    <input type="password" name="password" placeholder="Password">
+                                    <button type="submit" class="btn btn-primary">Sign In</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
