--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -13,8 +13,31 @@
                     <h3 class="modal-title" id="ModalTitle">Cart</h3>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
                 </div>
+                <div class="modal-body">
+                  <div id="shoppingCart">
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-sm">
+                          <table class="table table-sm">
+                            <thead> 
+                              <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Book</th>
+                                <th scope="col">Quantity</th>
+                                <th scope="col">Unit Price</th>
+                                <th scope="col">Sub Total</th>
+                                <th scope="col"></th>
+                              </tr>
+                            </thead>
 
-                
+                            
+                          </table>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
             </div>
         </div>
     </div>
