--- a/Static/CSS/styles.css
+++ b/Static/CSS/styles.css
@@ -21,3 +21,60 @@ header {
     margin-bottom: 45px;
 }
 
+.price {
+    color: seagreen;
+    font-weight: bold;    
+}
+
+.price:before {
+    content: '$';
+}
+
+.checkout {
+    text-transform: uppercase;
+    font-size: 0.8em;
+    font-weight: bold;
+}
+
+.add:hover {
+    background-color: deepskyblue;
+    border-color: deepskyblue;
+}
+
+.increment,
+.decrement{
+        height: 24px;
+        width: 24px;
+        border: 1px solid #222;
+        text-align: center;
+        box-sizing: border-box;
+        border-radius: 50%;
+        text-decoration: none;
+        color: #222;
+        font-size: 24px;
+        line-height: 22px;
+        display: inline-block;
+        cursor: pointer;             
+    }
+
+.decrement:hover, 
+.increment:hover {
+    color: green;  
+}
+
+.decrement:active, 
+.increment:active {    
+    background-color: green; 
+    color: white;  
+}
+
+
+.quantity{
+        height: 24px;
+        width: 48px;
+        text-align: center;
+        margin: 0 12px;
+        border-radius: 2px;
+        border: 1px solid #222;
+        
+}
