--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -29,8 +29,47 @@
                                 <th scope="col"></th>
                               </tr>
                             </thead>
+                            <tbody>
+                              {% if shopLen != 0 %}
+                              {% for i in range(shopLen) %}
+                                <tr>
+                                  <th scope="row">{{ i + 1 }}</th>
+                                  <td><img src="/Static/Images/{{ shoppingCart[i]["image"] }}" width="30px"  /></td>                        
+                                  <td>{{ shoppingCart[i]['SUM(qty)'] }}</td>
+                                  <td>{{ '${:,.2f}'.format(shoppingCart[i]["price"]) }}</td>
+                                  <td>{{ '${:,.2f}'.format(shoppingCart[i]['SUM(subTotal)']) }}</td>
+                                </tr>
+                            </tbody>
+                            {% endfor %}
 
-                            
+                    <tfoot>
+                      <tr>
+                        <td colSpan="7">Total: {{ '${:,.2f}'.format(total) }}<br /><br />
+                          <div class="modal-footer">
+                            <a href="/cart/"><button type="button" class="btn btn-primary checkout">Make Changes</button></a>
+                            <button type="button" class="btn btn-primary checkout" data-dismiss="modal">Continue Shopping</button>
+                            <a href="/checkout/"><button type="button" class="btn btn-success checkout">Checkout</button></a>
+                          </div>
+                        </td>
+                      </tr>
+                    </tfoot>
+                    {% else %}
+
+                    <tr>
+                      <td colSpan="7"><h3> cart is empty :\</h3></td>
+                    </tr>
+
+                  </tbody>
+                  <tfoot>
+                    <tr>
+                      <td colSpan="7">Get some more books!<br />
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-primary" data-dismiss="modal">Continue Shopping</button>
+                        </div>
+                      </td>
+                    </tr>
+                  </tfoot>
+                  {% endif %}
                           </table>
                         </div>
                       </div>
