--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -14,67 +14,69 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                  <div id="shoppingCart">
-                    <div class="container">
-                      <div class="row">
-                        <div class="col-sm">
-                          <table class="table table-sm">
-                            <thead> 
-                              <tr>
-                                <th scope="col">#</th>
-                                <th scope="col">Book</th>
-                                <th scope="col">Quantity</th>
-                                <th scope="col">Unit Price</th>
-                                <th scope="col">Sub Total</th>
-                                <th scope="col"></th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                              {% if shopLen != 0 %}
-                              {% for i in range(shopLen) %}
-                                <tr>
-                                  <th scope="row">{{ i + 1 }}</th>
-                                  <td><img src="/Static/Images/{{ shoppingCart[i]["image"] }}" width="30px"  /></td>                        
-                                  <td>{{ shoppingCart[i]['SUM(qty)'] }}</td>
-                                  <td>{{ '${:,.2f}'.format(shoppingCart[i]["price"]) }}</td>
-                                  <td>{{ '${:,.2f}'.format(shoppingCart[i]['SUM(subTotal)']) }}</td>
-                                </tr>
-                            </tbody>
-                            {% endfor %}
+                    <div id="shoppingCart">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-sm">
+                                    <table class="table table-sm">
+                                        <thead>
+                                            <tr>
+                                                <th scope="col">#</th>
+                                                <th scope="col">Book</th>
+                                                <th scope="col">Quantity</th>
+                                                <th scope="col">Unit Price</th>
+                                                <th scope="col">Sub Total</th>
+                                                <th scope="col"></th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            {% if shopLen != 0 %}
+                                            {% for i in range(shopLen) %}
+                                            <tr>
+                                                <th scope="row">{{ i + 1 }}</th>
+                                                <td><img src="/Static/Images/{{ shoppingCart[i]["image"] }}" width="30px" /></td>
+                                                <td>{{ shoppingCart[i]['SUM(qty)'] }}</td>
+                                                <td>{{ '${:,.2f}'.format(shoppingCart[i]["price"]) }}</td>
+                                                <td>{{ '${:,.2f}'.format(shoppingCart[i]['SUM(subTotal)']) }}</td>
+                                            </tr>
+                                        </tbody>
+                                        {% endfor %}
 
-                    <tfoot>
-                      <tr>
-                        <td colSpan="7">Total: {{ '${:,.2f}'.format(total) }}<br /><br />
-                          <div class="modal-footer">
-                            <a href="/cart/"><button type="button" class="btn btn-primary checkout">Make Changes</button></a>
-                            <button type="button" class="btn btn-primary checkout" data-dismiss="modal">Continue Shopping</button>
-                            <a href="/checkout/"><button type="button" class="btn btn-success checkout">Checkout</button></a>
-                          </div>
-                        </td>
-                      </tr>
-                    </tfoot>
-                    {% else %}
+                                        <tfoot>
+                                            <tr>
+                                                <td colSpan="7">
+                                                    Total: {{ '${:,.2f}'.format(total) }}<br /><br />
+                                                    <div class="modal-footer">
+                                                        <a href="/cart/"> <button type="button" class="btn btn-primary checkout">Make Changes</button></a>
+                                                        <button type="button" class="btn btn-primary checkout" data-dismiss="modal">Continue Shopping</button>
+                                                        <a href="/checkout/"> <button type="button" class="btn btn-success checkout">Checkout</button></a>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                        </tfoot>
+                                        {% else %}
 
-                    <tr>
-                      <td colSpan="7"><h3> cart is empty :\</h3></td>
-                    </tr>
+                                        <tr>
+                                            <td colSpan="7"><h3> cart is empty :\</h3></td>
+                                        </tr>
 
-                  </tbody>
-                  <tfoot>
-                    <tr>
-                      <td colSpan="7">Get some more books!<br />
-                        <div class="modal-footer">
-                          <button type="button" class="btn btn-primary" data-dismiss="modal">Continue Shopping</button>
+                                        </tbody>
+                                        <tfoot>
+                                            <tr>
+                                                <td colSpan="7">
+                                                    Get some more books!<br />
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-primary" data-dismiss="modal">Continue Shopping</button>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                        </tfoot>
+                                        {% endif %}
+                                    </table>
+                                </div>
+                            </div>
                         </div>
-                      </td>
-                    </tr>
-                  </tfoot>
-                  {% endif %}
-                          </table>
-                        </div>
-                      </div>
                     </div>
-                  </div>
                 </div>
 
             </div>
@@ -83,47 +85,48 @@
 
     <header>
         <nav class="navbar fixed-top navbar-dark bg-dark navbar-expand-sm box-shadow">
-          <a href="/" class="navbar-brand d-flex align-items-center">
-              <strong><i class="far fa-futbol"></i> Readers Paradise</strong>
-          </a>
-          {% if session %}
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item"><a href="/logout/" class="nav-link">Logout</a></li>
-            <li class="nav-item"><a href="/history/" class="nav-link">Your Purchases</a></li>
-          {% else %}
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item"><a href="/new/" class="nav-link">Sign Up</a></li>
-            <li class="nav-item"><a href="/login/" class="nav-link">Sign In</a></li>
-    
-          {% endif %}
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                Filter By
-              </a>
-              <div class="dropdown-menu">
-                  <a class="dropdown-item" href="/">All</a>              
-                  <a class="dropdown-item" href="/filter/?kind=Fiction">Fiction</a>
-                  <a class="dropdown-item" href="/filter/?kind=Mystery">Mystery</a>
-                  <a class="dropdown-item" href="/filter/?kind=Novel">Novel</a>
-                  <a class="dropdown-item" href="/filter/?sale=1">On Sale</a>
-                  <a class="dropdown-item" href="/filter/?price=1">Price</a>
-              </div>
-            </li>
-          </ul>
-          <div>
-            <button class="navbar-toggler" style="display:inline" type="button" data-toggle="modal" data-target="#modalCenter">
-              <span class="glyphicon glyphicon-shopping-cart" data-toggle="modal" data-target="">
-                <i class="fas fa-shopping-cart"></i>
-                <span class="counter"> </span>
-                <span class="counter"> </span>
-              </span>
-            </button>
-          </div>
+            <a href="/" class="navbar-brand d-flex align-items-center">
+                <strong><i class="far fa-futbol"></i> Readers Paradise</strong>
+            </a>
+            {% if session %}
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item"><a href="/logout/" class="nav-link">Logout</a></li>
+                <li class="nav-item"><a href="/history/" class="nav-link">Your Purchases</a></li>
+                {% else %}
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item"><a href="/new/" class="nav-link">Sign Up</a></li>
+                    <li class="nav-item"><a href="/login/" class="nav-link">Sign In</a></li>
+
+                    {% endif %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                            Filter By
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="/">All</a>
+                            <a class="dropdown-item" href="/filter/?kind=Fiction">Fiction</a>
+                            <a class="dropdown-item" href="/filter/?kind=Mystery">Mystery</a>
+                            <a class="dropdown-item" href="/filter/?kind=Novel">Novel</a>
+                            <a class="dropdown-item" href="/filter/?sale=1">On Sale</a>
+                            <a class="dropdown-item" href="/filter/?price=1">Price</a>
+                        </div>
+                    </li>
+                </ul>
+                <div>
+                    <button class="navbar-toggler" style="display:inline" type="button" data-toggle="modal" data-target="#modalCenter">
+                        <span class="glyphicon glyphicon-shopping-cart" data-toggle="modal" data-target="">
+                            <i class="fas fa-shopping-cart"></i>
+                            <span class="counter"> </span>
+                            <span class="counter"> </span>
+                        </span>
+                    </button>
+                </div>
         </nav>
-      </header>
+    </header>
 
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
 
-      
     <script src="{{ url_for('static',filename='Static/JS/script.js') }}"></script>
 </body>
 </html>
