--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,7 +1,35 @@
 {% extends "base_template.html" %}
+{% block title %}
+Readers Paradise - Cart
+{% endblock %}
 
 {% block body %}
 
-
+<div aria-hidden="true">
+    <div>
+      <div>
+        <div>
+          <h5 class="modal-title" id="exampleModalLongTitle">Shopping Cart</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          </button>
+        </div>
+        <div>
+            <div id="shoppingCart">
+              <div class="container">
+                <div class="row">
+                  <div class="col-sm">
+                    <table class="table table-sm">
+                      <thead>
+                        <tr>
+                          <th scope="col">#</th>
+                          <th scope="col">Book</th>
+                          <th scope="col">Quantity</th>
+                          <th scope="col">Unit Price</th>
+                          <th scope="col">Sub-Total</th>
+                          <th scope="col"></th>
+                        </tr>
+                      </thead>
+                      
+                        {% endfor %}
 
 {% endblock %}
