--- a/templates/cart.html
+++ b/templates/cart.html
@@ -52,5 +52,15 @@ Readers Paradise - Cart
                           </tr>
                         </tbody>
                         {% endfor %}
-
+                        <tfoot>
+                            <tr>
+                              <td colSpan="7">Total: {{ '${:,.2f}'.format(total) }}<br /><br />
+                                <div class="modal-footer">
+                                  <a href="/"><button type="button" class="btn btn-primary checkout">Continue Shopping</button></a>
+                                  <a href="/checkout/"><button type="button" class="btn btn-success checkout">Proceed to Checkout</button></a>
+                                </div>
+                              </td>
+                            </tr>
+                          </tfoot>
+                          
 {% endblock %}
