--- a/templates/cart.html
+++ b/templates/cart.html
@@ -78,5 +78,14 @@ Readers Paradise - Cart
                     </tfoot>
                     {% endif %}
 
-                    
+                </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
 {% endblock %}
