--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <div class="card text-center">
             <div class="card-body">
                 <form action="/buy/" methods="POST">
-                    <img src="/Static/Images/{{books[i]["image"]}}" class="shirt" alt="" />
+                    <img src="/Static/Images/{{books[i]["image"]}}" class="book" alt="" />
                     <h5 class="card-title">{{books[i]["team"]}}</h5>
                     {% if books[i]["onSale"] %}
                     <img src="/Static/Images/sale.png" width="26px" />
