--- a/Static/CSS/styles.css
+++ b/Static/CSS/styles.css
@@ -79,6 +79,10 @@ header {
     width: 200px;
     }
 
+    .bookcart{
+        width: 25px;
+    }
+
 .decrement:hover, 
 .increment:hover {
     color: green;  
