--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base_template.html" %}
-{% block title %}Home{% endblock %}
+{% block title %}Readers Paradise - Home{% endblock %}
 
 {% block body %}
 <div class="row" id="bookCard">
