--- a/templates/purchase_history.html
+++ b/templates/purchase_history.html
@@ -1,6 +1,6 @@
 {% extends "base_template.html" %}
 
-{% block title %}Readers Paradise{% endblock %}
+{% block title %}Readers Paradise - History{% endblock %}
 
 {% block body %}
 
