--- a/templates/signup.html
+++ b/templates/signup.html
@@ -14,7 +14,7 @@
 
             <nav class="navbar fixed-top navbar-dark bg-dark navbar-expand-sm box-shadow">
                 <a href="/" class="navbar-brand d-flex align-items-center">
-                    <strong><i class="far fa-futbol"></i>Readers Paradise</strong>
+                    <strong><i class="far fa-futbol"></i>Readers Paradise - Sign Up</strong>
                     </a></nav><br/></header><br />
                     
                     <main>
