--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -127,6 +127,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
 
-    <script src="{{ url_for('static',filename='../Static/JS/script.js') }}"></script>
+    <script type="text/javascript" src="../Static/JS/script.js"></script>
 </body>
 </html>
